Added green checks to valid and matching passwords

--- a/index.html
+++ b/index.html
@@ -66,12 +66,14 @@
             <label for="password">PASSWORD</label>
             <input minlength="5" placeholder=" " class="error" id="password" type="password" name="password" required>
             <span class="error-msg"></span>
+            <i class="fa-solid fa-check"></i>
             
           </div>
           <div class="form-row">
             <label for="confirmPassword">CONFIRM PASSWORD</label>
             <input minlength="5" placeholder=" " class="error" id="confirmPassword" type="password" name="confirmPassword" required>
             <span class="valid-check"></span>
+            <i class="fa-solid fa-check"></i>
           </div>
 
         </div>
