Add pattern to telephone field to force numbers

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
           
           <div class="form-row">
             <label for="phoneNumber">PHONE NUMBER</label>
-            <input minlength="10" maxlength="10" placeholder="1234567890" id="phoneNumber" type="tel" name="phoneNumber" required>
+            <input pattern="^[0-9]{10}$" minlength="10" maxlength="10" placeholder="1234567890" id="phoneNumber" type="tel" name="phoneNumber" required>
             <i class="fa-solid fa-check"></i>
           </div>
           
