Correct styles and image linking

--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Sign up Form</title>
-    <link rel="stylesheet" href="./styles.css">
+    <link rel="stylesheet" href="styles.css">
     <script src="https://kit.fontawesome.com/c1c6faea11.js" crossorigin="anonymous"></script>
-    <script src="/script.js" type="text/javascript" defer></script>
+    <script src="script.js" type="text/javascript" defer></script>
   </head>
 
   <body>
@@ -15,7 +15,7 @@
       <header class="main-header">
         <div class="hero-wrapper">
           <div class="logo-wrapper">
-            <img src="/images/odin-logo.png" alt="The Odin Project Logo">
+            <img src="images/odin-logo.png" alt="The Odin Project Logo">
             <h1 class="hero">ODIN</h1>
           </div>
         </div>
